Bug 511958 - wallpaper permissions desync
Summary: wallpaper permissions desync
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_flatpak (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-11 14:38 UTC by Harald Sitter
Modified: 2025-12-15 14:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.5
Sentry Crash Report:


Attachments
screenshot (486.41 KB, image/png)
2025-11-11 14:38 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2025-11-11 14:38:30 UTC
Created attachment 186698 [details]
screenshot

SUMMARY
The permission to set wallpapers in the KCM is not in sync with what is in the backing data. At least when the backing data is no

STEPS TO REPRODUCE
1. 

➜ flatpak permissions  wallpaper
Table     Object    App                         Permissions Data
wallpaper wallpaper com.belmoussaoui.ashpd.demo no          0x00

2.  open kcm

OBSERVED RESULT
kcm says 'Ask once'

EXPECTED RESULT
kcm says 'Deny'

SOFTWARE/OS VERSIONS
Operating System: KDE Linux 2025-11-02
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.0
Kernel Version: 6.17.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 64 GiB of RAM (62.7 GiB usable)
Graphics Processor: AMD Radeon RX 7800 XT

ADDITIONAL INFORMATION
also see attached screenshot
Comment 1 David Redondo 2025-12-15 14:00:39 UTC
Git commit 3d07943da556c7acb5f30adf80c0badb2cffcc9a by David Redondo.
Committed on 15/12/2025 at 14:00.
Pushed by davidre into branch 'master'.

preload wallpaper table
FIXED-IN:6.5.5

M  +1    -0    kcm.cpp

https://invent.kde.org/plasma/flatpak-kcm/-/commit/3d07943da556c7acb5f30adf80c0badb2cffcc9a
Comment 2 David Redondo 2025-12-15 14:01:56 UTC
Git commit 10961c32459db34697f386e51d393e57b0b94bf4 by David Redondo.
Committed on 15/12/2025 at 14:01.
Pushed by davidre into branch 'Plasma/6.5'.

preload wallpaper table
FIXED-IN:6.5.5


(cherry picked from commit 3d07943da556c7acb5f30adf80c0badb2cffcc9a)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -0    kcm.cpp

https://invent.kde.org/plasma/flatpak-kcm/-/commit/10961c32459db34697f386e51d393e57b0b94bf4