preload wallpaper table

BUG:511958
FIXED-IN:6.5.5


(cherry picked from commit 3d07943da556c7acb5f30adf80c0badb2cffcc9a)

Co-authored-by: David Redondo <kde@david-redondo.de>